--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,8 +13,8 @@
     <span class="navName" routerLink="/Photo-Outsourcing" routerLinkActive="TextBold">PhotoZing</span>
     <span class="navName" routerLink="/team" routerLinkActive="TextBold">Team</span>
   </div>
-  
-  <div class="col s3 topmar">
+  <div class="col s1"></div>
+  <div class="col s2 topmar">
     <span class="uniRedBtn">GET STARTED</span>
   </div>
 </div>
