--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,24 +1,21 @@
 
 <particles [style]="style" [width]="width" [height]="height" [params]="Params"></particles>
 
-
-<div class="row qoutes left">
-    <div class="col s4" style=" padding-top: 15%;">
+<div class="row center" style="margin-bottom: 0px;">
         <img  src="../../assets/images/my-logo.png" id="logo">
-    </div>
-  <div class="col s6" style=" padding-top: 12%;">
-      We are provide amazing 
-      <span typingAnimation [typeSpeed]="60" [startDelay]="1000" >
-          Web / Desktop Application and Mobile Application for All Platform ..
-          </span>
-      <div class="row">
-        <span class="uniRedBtn">GET STARTED</span>
-      </div>
-  </div>
-  <div class="col s2">
-      
-  </div>
-    
 </div>
 
+<div class="qoutes center">
+        We are provide amazing 
+        <span typingAnimation [typeSpeed]="50" [startDelay]="1000" >
+            Web / Desktop Application and Mobile Application for All Platform ..
+            </span>
+        <div class="row">
+          <span class="uniRedBtn">GET STARTED</span>
+        </div>
+</div>
 
+<!-- help button -->
+<div class="helpBtn">
+        <i class="material-icons">headset_mic</i>
+</div>
