--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,3 +19,40 @@
 <div class="helpBtn">
         <i class="material-icons">headset_mic</i>
 </div>
+
+<!-- What we do -->
+<div class="row border" style="margin-top:23%;">
+        <h4 class="we">What we do..</h4>
+        <div class="col s12">
+                <div class="row">
+                        <div class="col s4 center">
+                                <span class="weBtn" style="background:#039be5"><i class="far fa-lightbulb"></i></span>Idea
+                                <div class="row">
+                                        <h6 class="weContent">Initially begin with a conceptualized session to exhibit ideas and features...</h6>
+                                </div>
+                        </div>
+                        <div class="col s4 center">
+                                <span class="weBtn" style="background:#4CAF50"><i class="far fa-lightbulb"></i></span>Design
+                                <h6 class="weContent">Pursue user interface to all boards and devise designing options for the application.</h6>
+                        </div>
+                        <div class="col s4 center">
+                                <span class="weBtn" style="background:#ff833b"><i class="far fa-lightbulb"></i></span>Development
+                                <h6 class="weContent">Function in consistent sprints to transform design, feature of the application as specified.</h6>
+                        </div>
+                </div>
+                <div class="row">
+                        <div class="col s4 center">
+                                <span class="weBtn" style="background:#F44336"><i class="far fa-lightbulb"></i></span>Deployment
+                                <h6 class="weContent"></h6>
+                        </div>
+                        <div class="col s4 center">
+                                <span class="weBtn" style="background:#653bcb"><i class="far fa-lightbulb"></i></span>Testing
+                                <h6 class="weContent"></h6>
+                        </div>
+                        <div class="col s4 center">
+                                <span class="weBtn" style="background:#cb56cd"><i class="far fa-lightbulb"></i></span>Maintenance
+                                <h6 class="weContent"></h6>
+                        </div>
+                </div>
+        </div>
+</div>
