--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
 </div>
 
 <!-- help button -->
-<div class="helpBtn">
+<div class="btn-floating  pulse helpBtn">
         <i class="material-icons">headset_mic</i>
 </div>
 
@@ -26,33 +26,91 @@
         <div class="col s12">
                 <div class="row">
                         <div class="col s4 center">
-                                <span class="weBtn" style="background:#039be5"><i class="far fa-lightbulb"></i></span>Idea
+                                <span class="weBtn" style="background:#039be5"><i class="fas fa-lightbulb"></i></span>Idea
                                 <div class="row">
                                         <h6 class="weContent">Initially begin with a conceptualized session to exhibit ideas and features...</h6>
                                 </div>
                         </div>
                         <div class="col s4 center">
-                                <span class="weBtn" style="background:#4CAF50"><i class="far fa-lightbulb"></i></span>Design
+                                <span class="weBtn" style="background:#4CAF50"><i class="fas fa-palette"></i></span>Design
                                 <h6 class="weContent">Pursue user interface to all boards and devise designing options for the application.</h6>
                         </div>
                         <div class="col s4 center">
-                                <span class="weBtn" style="background:#ff833b"><i class="far fa-lightbulb"></i></span>Development
+                                <span class="weBtn" style="background:#ff833b"><i class="fas fa-file-code"></i></span>Development
                                 <h6 class="weContent">Function in consistent sprints to transform design, feature of the application as specified.</h6>
                         </div>
                 </div>
                 <div class="row">
                         <div class="col s4 center">
-                                <span class="weBtn" style="background:#F44336"><i class="far fa-lightbulb"></i></span>Deployment
-                                <h6 class="weContent"></h6>
+                                <span class="weBtn" style="background:#F44336"><i class="fas fa-podcast"></i></span>Deployment
+                                <h6 class="weContent">Collect assessment details from model view presenter built ,iterate and present our product.</h6>
                         </div>
                         <div class="col s4 center">
-                                <span class="weBtn" style="background:#653bcb"><i class="far fa-lightbulb"></i></span>Testing
-                                <h6 class="weContent"></h6>
+                                <span class="weBtn" style="background:#653bcb"><i class="fas fa-charging-station"></i></span>Testing
+                                <h6 class="weContent">Boundless cooperation with peer programming and periodic testing boundaries.</h6>
                         </div>
                         <div class="col s4 center">
-                                <span class="weBtn" style="background:#cb56cd"><i class="far fa-lightbulb"></i></span>Maintenance
-                                <h6 class="weContent"></h6>
+                                <span class="weBtn" style="background:#cb56cd"><i class="fas fa-tools"></i></span>Maintenance
+                                <h6 class="weContent">We provide round the clock service until the work gets exhausted...</h6>
                         </div>
+                </div>
+        </div>
+</div>
+
+
+<!-- Service -->
+<div class="service border" style="margin-top:10%;">
+        <h4 class="we">Services..</h4>
+        <div class="row" style="margin-top:4%;">
+                <div class="col s4 serviceB">
+                        <h6 class="Ser">Web/UX Development</h6>
+                        <p><i class="fas fa-palette" style="color:#039be5"></i> UI/UX - We develope a stylish and colourful static / Dynamic website(Responsive) using <a href="https://en.wikipedia.org/wiki/HTML5">HTML5</a>, <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets#CSS_3">CSS3</a>,  <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a> and <a href="https://wordpress.com/"> wordpress</a>, and provide a support, maintenance, Search Engine optimization and hosting. For UX we have a best professional team to design a template, logo, wireframe etc.</p>
+                </div>
+                <div class="col s4 serviceB">
+                                <h6 class="Ser">Application Development</h6>
+                                <p><i class="fas fa-seedling"  style="color:#cb56cd"></i> We provide a awesome Responsive Web Application, Our team worked with Latest Technology (<a href="https://nodejs.org/en/">NodeJS</a> ,Python AI/MI, WebPack, Bower, Babel and Testing) and Frameworks (<a href="https://angular.io/">Angular</a>/<a href="https://reactjs.org/">React</a>/<a href="https://vuejs.org/">Vue</a>/<a href="https://www.djangoproject.com/">Django Python</a>). also provide a end to end support and cloud <a href="https://firebase.google.com/">Firebase </a> (hosting, database, storage, Authentication etc..) interaction.  </p>
+                </div>
+                <div class="col s4 serviceB">
+                                <h6 class="Ser">Desktop Application</h6>
+                                <p> <i class="fas fa-laptop-code"  style="color:#ff833b"></i> Desktop Application - we provide a desktop application for all platform, here we use <a href="https://electronjs.org/">Electron</a> Framework that provide to write a code onces then we can generate application in all platform ios, Windows and Linux ,we include <a href="https://www.google.com/search?q=js+frameworks&rlz=1C1CHBF_enIN844IN844&oq=JS+frame&aqs=chrome.0.0j69i57j0l4.4660j1j7&sourceid=chrome&ie=UTF-8">JS framework</a> in the electron so Application look stylish and performance high.</p>
+                </div>
+                
+        </div>
+        <div class="row Row2">
+                <div class="col s4 serviceB">
+                                <h6 class="Ser">Mobile Development</h6>
+                                <p><i class="fas fa-mobile-alt"  style="color:#4CAF50"></i> Mobile Apps - now a day developer and client facing a problem to create a app for All platform, because of cost and time problem, so we provide a Hybrid Mobile Application using <a href="https://ionicframework.com/">Ionic</a> Framework and Google <a href="https://flutter.dev/">Flutter</a> (Dart language). </p>
+                </div>
+                <div class="col s4 serviceB">
+                                <h6 class="Ser">PhotoOutSourcing</h6>
+                                <p><i class="fas fa-camera-retro"  style="color:#F44336"></i> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est unde iste explicabo provident maiores maxime earum ad molestias officiis commodi, reprehenderit dolor voluptas vel deserunt dicta enim deleniti velit possimus.</p>
+                </div>
+                <div class="col s4 serviceB">
+                                <h6 class="Ser">SEO</h6>
+                                <p><i class="fas fa-globe-americas"  style="color:#653bcb"></i> Ranking First and higher growth is always everybody’s goal. Unitrix realise your goal and makes it reality by our SEO Services.We have planned strategy and protocol which will be followed to give our clients website top slot in the Search Engine.</p>
+                </div>
+        </div>
+</div>
+
+<!-- website -->
+<div class="row" style="margin-top:5%;">
+        <img src="../../assets/images/web-application.jpg" width="100%;">
+</div>
+<div class="row center">
+        <h6 class="webContent">"We target the progress of web solutions to the requirement of the organization and align the layout towards the client who will value it to show outstanding experience, to reform processes, to deliver unique services over the internet and to unite information cautiously in a centralized cache and access it in real time."</h6>
+</div>
+
+<!-- responsive site -->
+<div class="row border" style="margin-top:5%;">
+        <h4 class="we">About Us</h4>
+        <div class="row">
+                <img src="../../assets/images/res.jpg" style="margin-left: 21%;width: 54%;">
+                <p class="at center">
+                        At Unitrix, we believe your business deserves better Application - application that’s ready to go, easy to setup and use, and requires minimal customization. All of our service live up to this promise and are backed by our world-class support.
+                
+                </p>
+                <div class="row center" style="margin-top:2%;">
+                        <span class="uniRedBtn">GET STARTED</span>
                 </div>
         </div>
 </div>
