--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -14,28 +14,37 @@ h4,h5{
     font-weight: 300;
     font-size: 23px;
     letter-spacing: 1px;
-    padding: 0 300px;
+    padding: 0 233px;
 }
 #logo{
     width: 32%;
     margin-top: 10%;
 }
-
+p{
+    font-weight: 300;
+}
+.at{
+    padding: 0 11rem;
+    font-size: 17px;
+}
+.webContent{
+    padding: 0 14rem;
+    font-size: 19px;
+    font-weight: 300;
+    letter-spacing: 0px;
+    word-spacing: 2px;
+}
 .helpBtn{
     background: #2168f3;
-    width: fit-content;
-    border-radius: 50%;
-    padding: 10px 10px;
-    line-height: 2px;
     color: #fff;
     position: fixed;
     cursor: pointer;
     bottom: 15px;
-    right: 15px;
+    right: 10px;
 }
 
 .weBtn{
-    padding: 6px 10px;
+    padding: 8px 11px;
     border-radius: 50%;
     color: #fff;
     margin-right: 2%;
@@ -47,6 +56,7 @@ h4,h5{
     border-radius: 4px;
 }
 .we{
+    
     margin-top: -43px !important;
     width: 18%;
     background: #fff;
@@ -56,6 +66,39 @@ h4,h5{
 }
 .weContent{
     color: #818188;
+    word-spacing: 2px;
     font-weight: 300;
     padding-top: 6px;
+}
+.serviceB{
+    border: 1px solid #d1d1d1;
+    border-radius: 4px;
+    width: 30% !important;
+    min-height: 210px;
+    max-height: 210px;
+    margin-left: 28px !important;
+}
+.Row2 > .serviceB{
+    min-height: 165px;
+    max-height: 165px;
+    margin: 4% 0;
+}
+.Ser{
+    margin-top: -10px !important;
+    width: 55%;
+    background: #fff;
+    font-weight: 400;
+    margin-bottom: 2% !important;
+    text-align: center;
+    margin-left: 26% !important;
+}
+.serviceB > p {
+    padding: 5px 4px 8px 4px;
+    letter-spacing: 0.2px;
+    word-spacing: 1px;
+}
+.serviceB:hover{
+    box-shadow: 0 0 0 0px rgba(0,0,0,.15), 0 3px 4px rgba(0,0,0,.2);
+    transition: box-shadow 83ms;
+    cursor: pointer;
 }
