--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,17 +11,15 @@
             Web / Desktop Application and Mobile Application for All Platform ..
             </span>
         <div class="row">
-          <span class="uniRedBtn">GET STARTED</span>
+          <span class="uniRedBtn" routerLink="/Get-started">GET STARTED</span>
         </div>
 </div>
 
-<!-- help button -->
-<div class="btn-floating  pulse helpBtn">
-        <i class="material-icons">headset_mic</i>
-</div>
+
+
 
 <!-- What we do -->
-<div class="row border" style="margin-top:23%;">
+<div class="row border" style="margin-top:23% !important;">
         <h4 class="we">What we do..</h4>
         <div class="col s12">
                 <div class="row">
@@ -59,7 +57,7 @@
 
 
 <!-- Service -->
-<div class="service border" style="margin-top:10%;">
+<div class="service border" style="margin-top:10% !important;">
         <h4 class="we">Services..</h4>
         <div class="row" style="margin-top:4%;">
                 <div class="col s4 serviceB">
@@ -68,7 +66,7 @@
                 </div>
                 <div class="col s4 serviceB">
                                 <h6 class="Ser">Application Development</h6>
-                                <p><i class="fas fa-seedling"  style="color:#cb56cd"></i> We provide a awesome Responsive Web Application, Our team worked with Latest Technology (<a href="https://nodejs.org/en/">NodeJS</a> ,Python AI/MI, WebPack, Bower, Babel and Testing) and Frameworks (<a href="https://angular.io/">Angular</a>/<a href="https://reactjs.org/">React</a>/<a href="https://vuejs.org/">Vue</a>/<a href="https://www.djangoproject.com/">Django Python</a>). also provide a end to end support and cloud <a href="https://firebase.google.com/">Firebase </a> (hosting, database, storage, Authentication etc..) interaction.  </p>
+                                <p><i class="fas fa-seedling"  style="color:#1aa93a"></i> We provide a awesome Responsive Web Application, Our team worked with Latest Technology (<a href="https://nodejs.org/en/">NodeJS</a> ,Python AI/MI, WebPack, Bower, Babel and Testing) and Frameworks (<a href="https://angular.io/">Angular</a>/<a href="https://reactjs.org/">React</a>/<a href="https://vuejs.org/">Vue</a>/<a href="https://www.djangoproject.com/">Django Python</a>). also provide a end to end support and cloud <a href="https://firebase.google.com/">Firebase </a> (hosting, database, storage, Authentication etc..) interaction.  </p>
                 </div>
                 <div class="col s4 serviceB">
                                 <h6 class="Ser">Desktop Application</h6>
@@ -79,29 +77,40 @@
         <div class="row Row2">
                 <div class="col s4 serviceB">
                                 <h6 class="Ser">Mobile Development</h6>
-                                <p><i class="fas fa-mobile-alt"  style="color:#4CAF50"></i> Mobile Apps - now a day developer and client facing a problem to create a app for All platform, because of cost and time problem, so we provide a Hybrid Mobile Application using <a href="https://ionicframework.com/">Ionic</a> Framework and Google <a href="https://flutter.dev/">Flutter</a> (Dart language). </p>
+                                <p><i class="fas fa-mobile-alt"  style="color:#dc13cb"></i> Mobile Apps - now a day developer and client facing a problem to create a app for All platform, because of cost and time problem, so we provide a Hybrid Mobile Application using <a href="https://ionicframework.com/">Ionic</a> Framework and Google <a href="https://flutter.dev/">Flutter</a> (Dart language). </p>
                 </div>
                 <div class="col s4 serviceB">
                                 <h6 class="Ser">PhotoOutSourcing</h6>
-                                <p><i class="fas fa-camera-retro"  style="color:#F44336"></i> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est unde iste explicabo provident maiores maxime earum ad molestias officiis commodi, reprehenderit dolor voluptas vel deserunt dicta enim deleniti velit possimus.</p>
+                                <p><i class="fas fa-camera-retro"  style="color:#c21508"></i> We provide Consistent image output with quick turnaround time. Our team work with latest tools like <a href="https://www.adobe.com/products/photoshop.html ">Adobe Photoshop</a>, Photoshop CC, Lightroom CC, Lightroom Classic, Ptgui for image stitching.</p>
                 </div>
                 <div class="col s4 serviceB">
                                 <h6 class="Ser">SEO</h6>
-                                <p><i class="fas fa-globe-americas"  style="color:#653bcb"></i> Ranking First and higher growth is always everybody’s goal. Unitrix realise your goal and makes it reality by our SEO Services.We have planned strategy and protocol which will be followed to give our clients website top slot in the Search Engine.</p>
+                                <p><i class="fas fa-globe-americas"  style="color:#5b4296"></i> Ranking First and higher growth is always everybody’s goal. Unitrix realise your goal and makes it reality by our SEO Services.We have planned strategy and protocol which will be followed to give our clients website top slot in the Search Engine.</p>
                 </div>
         </div>
 </div>
 
+<div class="row center our">
+        <img src="../../assets/images/careers-bg.png" style="padding-top: 6%;">
+        <h5 style="padding-top:2%;">Unitrix - Together we are better</h5>
+        <div class="row" style="padding-top: 1%;
+        font-size: 15px;
+        width: 58%;">
+                <p>Good teams make the structure on which successful businesses are built and good team members are the building blocks of this structure.</p>
+                <p>Our teams are small. They have clear goals. And the common bond between team members is collaborative spirit and mutual trust.</p>
+        </div>
+</div>
+
 <!-- website -->
-<div class="row" style="margin-top:5%;">
+<div class="row" style="margin-top:5% !important;">
         <img src="../../assets/images/web-application.jpg" width="100%;">
 </div>
 <div class="row center">
-        <h6 class="webContent">"We target the progress of web solutions to the requirement of the organization and align the layout towards the client who will value it to show outstanding experience, to reform processes, to deliver unique services over the internet and to unite information cautiously in a centralized cache and access it in real time."</h6>
+        <h6 class="webContent">" We target the progress of web solutions to the requirement of the organization and align the layout towards the client who will value it to show outstanding experience, to reform processes, to deliver unique services over the internet and to unite information cautiously in a centralized cache and access it in real time."</h6>
 </div>
 
 <!-- responsive site -->
-<div class="row border" style="margin-top:5%;">
+<div class="row border" style="margin-top:5% !important;">
         <h4 class="we">About Us</h4>
         <div class="row">
                 <img src="../../assets/images/res.jpg" style="margin-left: 21%;width: 54%;">
@@ -109,8 +118,8 @@
                         At Unitrix, we believe your business deserves better Application - application that’s ready to go, easy to setup and use, and requires minimal customization. All of our service live up to this promise and are backed by our world-class support.
                 
                 </p>
-                <div class="row center" style="margin-top:2%;">
-                        <span class="uniRedBtn">GET STARTED</span>
+                <div class="row center" style="margin-top:2% !important;">
+                        <span class="uniRedBtn" routerLink="/Get-started">GET STARTED</span>
                 </div>
         </div>
 </div>
