--- a/src/app/photo-zing/photo-zing.component.html
+++ b/src/app/photo-zing/photo-zing.component.html
@@ -1,3 +1,118 @@
-<p>
-  photo-zing works!
-</p>
+<div class="row">
+  <p id="zing">PhotoZing</p>
+  <span class="center letter-spacing"><h4 style="font-weight: 300;font-size: 2.5rem;">When photography meets computer vision</h4>
+    <p>Get your photo & video shoots around the world in 24h</p></span>
+</div>
+
+<div class="row center"> <span class="uniRedBtn">Order Now</span></div>
+
+<div class="row quality center">
+  <h2>A tailor-made service :<span style="color: #44b3c6;"> simple</span> & <span style="color:#c3668a;"> effective</span> </h2>
+  <div class="col s4">
+    <img class="Qimg" src="../../assets/images/zing/ico-photographers-rocket-shadow.svg">
+    <h5>Standardized Quality</h5>
+    <p class="center Qcontent">Our photographers are selected by our teams and benefit from continuous training to guarantee our standards of excellence</p>
+  </div>
+  <div class="col s4">
+    <img class="Qimg" src="../../assets/images/zing/ico-photographers-diamond-shadow.svg">
+    <h5>In large scale</h5>
+    <p class="center Qcontent">With 40,000 professional photographers, we operate thousands of photo shoots daily in more than 100 countries</p>
+  </div>
+  <div class="col s4">
+    <img class="Qimg" src="../../assets/images/zing/ico-photographers-time-shadow.svg">
+    <h5>Quick delivery</h5>
+    <p class="center Qcontent">We deliver your photos in 24h around the world</p>
+  </div>
+</div>
+
+<!-- services -->
+<div class="row border" style="margin-top: 12% !important;">
+  <h4 class="we">Services..</h4>
+  <div class="row">
+    <div class="col s4 center">
+        <ul>
+            <li>HDR POST PROCESSING</li>
+            <li>SINGLE EXPOSURE PROCESSING</li>
+            <li>PHOTOSHOP RETOUCHING</li>
+            <li>ADD / REMOVE OBJECTS</li>
+          </ul>
+    </div>
+
+    <div class="col s4 center">
+        <ul>
+            <li>360 DEGREE PANORAMA</li>
+            <li>FLOOR PLAN FROM SKETCH</li>
+            <li>TWILIGHT EDITING</li>
+            <li>VIRTUAL STAGING</li>
+            <li>IMAGE MASKING</li>
+          </ul>
+    </div>
+
+    <div class="col s4 center">
+        <ul>
+            <li>CLIPPING FOR COMPLEX OBJECTS</li>
+            <li>CLIPPING PATH</li>
+            <li>BACKGROUND REMOVAL
+            <li>IMAGE SHADOW / MIRROR EFFECT</li>
+          </ul>
+    </div>
+  </div>
+</div>
+
+<div class="row things">
+  <p class="center" style="font-weight: 300;
+  font-size: 1.5rem;
+  margin-top: 10% !important;">Things we do in Image Editing</p>
+  <p class="things">We always fulfill our promise of delivering the finished images in the expected turnaround time, as your time is important to us. With our high-performance processing tools, we help in reducing your efforts and resources, as we take care of enhancing the quality of your image and make it appealing to your buyers.</p>
+</div>
+
+  <!-- SECTORS -->
+  <div class="row" style="margin-top: 12% !important;">
+    <h4 class="we">Sectors..</h4>
+    <div class="row center">
+      <div class="col s2">Real Estate</div>
+      <div class="col s2">Food</div>
+      <div class="col s2">Experiences</div>
+      <div class="col s2">Ecommerce</div>
+      <div class="col s2">Office</div>
+      <div class="col s2">Retail</div>
+    </div>
+</div>
+
+<!-- Photo Grid -->
+<div class="roww" style="padding: 0 50px;"> 
+  <div class="column">
+    <img src="../../assets/images/w3/falls2.jpg" style="width:100%">
+    <img src="../../assets/images/w3/rocks.jpg" style="width:100%">
+    <img src="../../assets/images/w3/falls2.jpg" style="width:100%">
+    <img src="../../assets/images/w3/paris.jpg" style="width:100%">
+    <img src="../../assets/images/w3/nature.jpg" style="width:100%">
+    <img src="../../assets/images/w3/mist.jpg" style="width:100%">
+    <img src="../../assets/images/w3/paris.jpg" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="../../assets/images/w3/underwater.jpg" style="width:100%">
+    <img src="../../assets/images/w3/ocean.jpg" style="width:100%">
+    <img src="../../assets/images/w3/wedding.jpg" style="width:100%">
+    <img src="../../assets/images/w3/mountainskies.jpg" style="width:100%">
+    <img src="../../assets/images/w3/rocks.jpg" style="width:100%">
+    <img src="../../assets/images/w3/underwater.jpg" style="width:100%">
+  </div>  
+  <div class="column">
+    <img src="../../assets/images/w3/wedding.jpg" style="width:100%">
+    <img src="../../assets/images/w3/rocks.jpg" style="width:100%">
+    <img src="../../assets/images/w3/falls2.jpg" style="width:100%">
+    <img src="../../assets/images/w3/paris.jpg" style="width:100%">
+    <img src="../../assets/images/w3/nature.jpg" style="width:100%">
+    <img src="../../assets/images/w3/mist.jpg" style="width:100%">
+    <img src="../../assets/images/w3/paris.jpg" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="../../assets/images/w3/underwater.jpg" style="width:100%">
+    <img src="../../assets/images/w3/ocean.jpg" style="width:100%">
+    <img src="../../assets/images/w3/wedding.jpg" style="width:100%">
+    <img src="../../assets/images/w3/mountainskies.jpg" style="width:100%">
+    <img src="../../assets/images/w3/rocks.jpg" style="width:100%">
+    <img src="../../assets/images/w3/underwater.jpg" style="width:100%">
+  </div>
+</div>
