--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,6 +2,8 @@
     background: #fafafa;
     margin-top: 3%;
     margin-bottom: 0%;
+    
+    bottom: 0%;
     border-top:1px solid #d1d1d1;
 }
 .copyright{
