--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -2,9 +2,9 @@
 <particles [style]="style" [width]="width" [height]="height" [params]="Params"></particles>
 
 
-<div class="row qoutes left">
+<div class="row qoutes left" style="margin-top: 62px;">
     <div class="col s5" style=" padding-top: 15%;">
-        <img  src="../../assets/images/my-logo.png" id="logo">
+        <img src="../../assets/images/my-logo.png" id="logo">
     </div>
     <div class="col s7">
         <div class="teamContent"><i class="fas fa-globe-americas"></i><span class="teamTITLE">Our Vision</span>
@@ -18,8 +18,71 @@
         <div class="teamContent"><i class="fa fa-users shuu" aria-hidden="true"></i><span class="teamTITLE">Our Team</span>
         <div>Our web and mobile software engineers are engaged with customers and commercial teams to deliver the prime element with market correspondence. In due course, we have devised eminently conductive and collaborative development and working atmosphere using the trending architectural facilities and communication technologies. Hence, our customers sense ultimate amenity despite language, culture, and time zone hurdles.</div>
         </div>
-    </div>
-    
+    </div>    
 </div>
 
 
+
+
+
+<div class="row center">
+    <img src="../../assets/images/careers-bg.png" style="padding-top: 8%;">
+</div>
+
+<div class="row" style="padding-top: 4%;">
+    <div class="col s5" style="padding: 20px 100px;">
+        <div class="row">
+                <p class="styleTxt">Unitrix</p>
+                <ul class="icon">
+                    <li><i class="fas fa-address-book"></i> +91 894-041-7854</li>
+                    <li><i class="fas fa-mail-bulk"></i> jaganramanikanth@gmail.com</li>
+                  </ul>
+        </div>
+        <div class="row">
+                <p class="styleTxt">PhotoZing</p>
+                <ul class="icon">
+                    <li><i class="fas fa-address-book"></i> +91 962-977-7100</li>
+                    <li><i class="fas fa-mail-bulk"></i> dhanushkodi95@gmail.com</li>
+                  </ul>
+        </div>
+    </div>
+    <div class="col s6">
+       <div class="row card" style="width: 70%;
+       padding: 23px 5px;
+       float: right;">
+           <h5 class="center" style="font-weight: 300;">Get in touch with us</h5>
+           <div class="row">
+                <div class="input-field col s6">
+                        
+                        <input id="icon_prefix" type="text" class="validate">
+                        <label for="icon_prefix">First Name</label>
+                      </div>
+                <div class="input-field col s6">
+                            
+                            <input id="icon_prefix" type="text" class="validate">
+                            <label for="icon_prefix">Last Name</label>
+                          </div>
+           </div>
+           <div class="input-field col s12">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+            </div>
+            <div class="input-field col s12">
+                   
+                    <input id="icon_telephone" type="tel" class="validate">
+                    <label for="icon_telephone">Telephone</label>
+                  </div>
+            
+                  <div class="row">
+                        <div class="input-field col s12">
+                          <textarea id="textarea1" class="materialize-textarea"></textarea>
+                          <label for="textarea1">Your message</label>
+                        </div>
+                      </div>
+            
+            <div class="center"><span class="uniRedBtn">Sumbit</span></div>
+       </div>
+        
+    </div>
+    
+</div>
