--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,10 @@
     background-color: #2168f3;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.2), 0 2px 3px 0 rgba(0,0,0,.19);
 }
+.styleTxt{
+    font-family: 'Aclonica';
+    font-size: 30px;
+}
 .uniRedBtn:hover{
     background-color: #fff;
     color: #2168f3;
