--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,30 +60,30 @@
 <div class="service border" style="margin-top:10% !important;">
         <h4 class="we">Services..</h4>
         <div class="row" style="margin-top:4%;">
-                <div class="col s4 serviceB">
+                <div class="col s4 serviceB" routerLink="/Get-started">
                         <h6 class="Ser">Web/UX Development</h6>
                         <p><i class="fas fa-palette" style="color:#039be5"></i> UI/UX - We develope a stylish and colourful static / Dynamic website(Responsive) using <a href="https://en.wikipedia.org/wiki/HTML5">HTML5</a>, <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets#CSS_3">CSS3</a>,  <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a> and <a href="https://wordpress.com/"> wordpress</a>, and provide a support, maintenance, Search Engine optimization and hosting. For UX we have a best professional team to design a template, logo, wireframe etc.</p>
                 </div>
-                <div class="col s4 serviceB">
+                <div class="col s4 serviceB" routerLink="/Get-started">
                                 <h6 class="Ser">Application Development</h6>
                                 <p><i class="fas fa-seedling"  style="color:#1aa93a"></i> We provide a awesome Responsive Web Application, Our team worked with Latest Technology (<a href="https://nodejs.org/en/">NodeJS</a> ,Python AI/MI, WebPack, Bower, Babel and Testing) and Frameworks (<a href="https://angular.io/">Angular</a>/<a href="https://reactjs.org/">React</a>/<a href="https://vuejs.org/">Vue</a>/<a href="https://www.djangoproject.com/">Django Python</a>). also provide a end to end support and cloud <a href="https://firebase.google.com/">Firebase </a> (hosting, database, storage, Authentication etc..) interaction.  </p>
                 </div>
-                <div class="col s4 serviceB">
+                <div class="col s4 serviceB" routerLink="/Get-started">
                                 <h6 class="Ser">Desktop Application</h6>
                                 <p> <i class="fas fa-laptop-code"  style="color:#ff833b"></i> Desktop Application - we provide a desktop application for all platform, here we use <a href="https://electronjs.org/">Electron</a> Framework that provide to write a code onces then we can generate application in all platform ios, Windows and Linux ,we include <a href="https://www.google.com/search?q=js+frameworks&rlz=1C1CHBF_enIN844IN844&oq=JS+frame&aqs=chrome.0.0j69i57j0l4.4660j1j7&sourceid=chrome&ie=UTF-8">JS framework</a> in the electron so Application look stylish and performance high.</p>
                 </div>
                 
         </div>
         <div class="row Row2">
-                <div class="col s4 serviceB">
+                <div class="col s4 serviceB" routerLink="/Get-started">
                                 <h6 class="Ser">Mobile Development</h6>
                                 <p><i class="fas fa-mobile-alt"  style="color:#dc13cb"></i> Mobile Apps - now a day developer and client facing a problem to create a app for All platform, because of cost and time problem, so we provide a Hybrid Mobile Application using <a href="https://ionicframework.com/">Ionic</a> Framework and Google <a href="https://flutter.dev/">Flutter</a> (Dart language). </p>
                 </div>
-                <div class="col s4 serviceB">
+                <div class="col s4 serviceB" routerLink="/Photo-Outsourcing">
                                 <h6 class="Ser">PhotoOutSourcing</h6>
                                 <p><i class="fas fa-camera-retro"  style="color:#c21508"></i> We provide Consistent image output with quick turnaround time. Our team work with latest tools like <a href="https://www.adobe.com/products/photoshop.html ">Adobe Photoshop</a>, Photoshop CC, Lightroom CC, Lightroom Classic, Ptgui for image stitching.</p>
                 </div>
-                <div class="col s4 serviceB">
+                <div class="col s4 serviceB" routerLink="/Get-started">
                                 <h6 class="Ser">SEO</h6>
                                 <p><i class="fas fa-globe-americas"  style="color:#5b4296"></i> Ranking First and higher growth is always everybody’s goal. Unitrix realise your goal and makes it reality by our SEO Services.We have planned strategy and protocol which will be followed to give our clients website top slot in the Search Engine.</p>
                 </div>
@@ -102,12 +102,10 @@
 </div>
 
 <!-- website -->
-<div class="row" style="margin-top:5% !important;">
+<!-- <div class="row" style="margin-top:5% !important;">
         <img src="../../assets/images/web-application.jpg" width="100%;">
-</div>
-<div class="row center">
-        <h6 class="webContent">" We target the progress of web solutions to the requirement of the organization and align the layout towards the client who will value it to show outstanding experience, to reform processes, to deliver unique services over the internet and to unite information cautiously in a centralized cache and access it in real time."</h6>
-</div>
+</div> -->
+
 
 <!-- responsive site -->
 <div class="row border" style="margin-top:5% !important;">
@@ -122,4 +120,8 @@
                         <span class="uniRedBtn" routerLink="/Get-started">GET STARTED</span>
                 </div>
         </div>
+</div>
+
+<div class="row center" style="margin: 6% 0px;">
+        <h6 class="webContent" style="font-size: 15px;">" We target the progress of web solutions to the requirement of the organization and align the layout towards the client who will value it to show outstanding experience, to reform processes, to deliver unique services over the internet and to unite information cautiously in a centralized cache and access it in real time."</h6>
 </div>
