--- a/src/app/started/started.component.html
+++ b/src/app/started/started.component.html
@@ -1,3 +1,58 @@
-<p>
-  started works!
-</p>
+<div class="row started" style="padding-top:5%">
+  <img src="../../assets/images/web-application.jpg" style="width: 100%;
+  position: absolute;
+  height: 590px;">
+  <div class="col s3">
+    
+  </div>
+  <div class="col s6 card z-depth-5" style="padding: 0 40px;border-radius: 8px;">
+           <h5 class="center" style="font-weight: 300;padding-top: 16px;">Project Details / Queries</h5>
+           <div class="row">
+                <div class="input-field col s6">
+                        
+                        <input id="icon_prefix" type="text" class="validate">
+                        <label for="icon_prefix">First Name</label>
+                      </div>
+                <div class="input-field col s6">
+                            
+                            <input id="icon_prefix" type="text" class="validate">
+                            <label for="icon_prefix">Last Name</label>
+                          </div>
+           </div>
+           <div class="input-field row">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+            </div>
+            <mz-select-container>
+              <select mz-select
+                id="options-select"
+                [placeholder]="'Choose Your Service'"
+              >
+              <option value="1">Web Development</option>
+              <option value="2">Desktop Application</option>
+              <option value="3">Mobile Apps</option>
+              <option value="4">Search Engine Optimization</option>
+              <option value="5">Ecommerce</option>
+              <option value="6">Firebase</option>
+              <option value="7">UX/Wordpress</option>
+                
+              </select>
+            </mz-select-container>
+            <div class="input-field row">
+                   
+                    <input id="icon_telephone" type="tel" class="validate">
+                    <label for="icon_telephone">Telephone</label>
+                  </div>
+                  
+            
+                  <div class="row">
+                        <div class="input-field col s12">
+                          <textarea id="textarea1" class="materialize-textarea"></textarea>
+                          <label for="textarea1">Your message</label>
+                        </div>
+                      </div>
+            
+            <div class="center" style="margin-bottom:4%;"><span class="uniRedBtn">Submit</span></div>
+  </div>
+  <div class="col s3"></div>
+</div>
