--- a/src/app/team/team.component.css
+++ b/src/app/team/team.component.css
@@ -13,12 +13,12 @@
     margin-bottom: 1%;
 }
 .teamTITLE {
-    font-weight: 600;
+    font-weight: 400;
 }
-.styleTxt{
-    font-family: 'Aclonica';
-    font-size: 30px;
+.teamContent > div{
+    font-weight: 300;
 }
+
 .icon .fas{
     font-size: 15px;
     color: rgb(157, 156, 156);
